# liquid-rust

./: .#addsub_ovfl.smt  .gitignore  Cargo.toml  README.md  addsub_ovfl.smt  addsub_ovfl.smt2  impl.smt  interaction.smt2  interaction_out.smt2  interning.patch  path_handling_refactoring.patch  prelude.smt2  rustc.version  rustup.version  simple.smt  simple.smt2  ssa.patch  trash.patch  z3
.run/: Build example.run.xml  Build plugin.run.xml  Check example.run.xml  Check plugin.run.xml  Clean.run.xml  Run example.run.xml  Test test.run.xml  check libsmt.run.xml
lint_plugin/: Cargo.toml  build.rs
lint_plugin/examples/ex1/: .Cargo  cfg.dot  foo.smt  main.rs  tmp
lint_plugin/resources/: prelude.smt2
lint_plugin/src/: error.rs  expr.rs  folder.rs  inference_ctx.rs  lib.rs  mir_analyzer.rs  name_registry.rs  parser.rs  refinable_entity.rs  refined_type.rs  refinements_registry.rs  restriction_converter.rs  restriction_expr.rs  restriction_extractor.rs  rustpeg_parser.rs  smt_ctx.rs  to_smt.rs  typable.rs  utils.rs  visitor.rs  z3.rs  z3_interface.rs
lint_plugin/src/parser/: grammar.pest
lint_plugin/src/rustpeg_parser/: grammar.rustpeg
lint_plugin/tests/: test.rs
lint_plugin/tests/ui/: no-attributes.rs  precondition-satisfied.rs  precondition-unsatisfied.rs
test_crate/: Cargo.toml
test_crate/src/: main.rs
