[package]
name = "test_crate"
version = "0.1.0"
authors = ["fan-tom <lokomot476@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustproof = "0.1.0"

[target.'cfg(NOT_A_PLATFORM)'.dependencies]
rustc = {path = "../../rust/src/librustc"}
rustc_plugin = {path = "../../rust/src/librustc_plugin"}
syntax = {path = "../../rust/src/libsyntax"}
syntax_pos = {path = "../../rust/src/libsyntax_pos"}
